# django-sandbox

./: pyproject.toml
django-pytest/: pyproject.toml
django-pytest/api/companies/: models.py  serializers.py  views.py
django-pytest/api/companies/migrations/: 0001_initial.py
django-pytest/api/coronavstech/: asgi.py  settings.py  urls.py
django-pytest/api/coronavstech/companies/: admin.py  models.py  serializers.py  urls.py  views.py
django-pytest/api/coronavstech/companies/migrations/: 0001_initial.py
django-pytest/api/coronavstech/companies/tests/: test_api.py
django-pytest/api/coronavstech/coronavstech/: settings.py  wsgi.py
django_orm/core/: settings.py
django_orm/inventory/: models.py
django_orm/inventory/migrations/: 0001_initial.py  0002_alter_brand_name.py
drf-auth-test/: README.md  pyproject.toml
mysite/mysite/: settings.py
mysite/polls/: urls.py  views.py
mysite/polls/migrations/: 0001_initial.py
realtor_django_scraper/: manage.py
realtor_django_scraper/api/: models.py
realtor_django_scraper/api/migrations/: 0001_initial.py
realtor_django_scraper/core/: asgi.py  settings.py
realtor_django_scraper/docker/: docker-compose.yml
realtor_django_scraper/realtor_django_scraper/: asgi.py  settings.py  urls.py  wsgi.py
realtor_django_scraper/scraper/scraper/: items.py
