[tool.poetry]
name = "django-sandbox"
version = "0.1.0"
description = "A virutalenvironment for django"
authors = ["Ragnar Olafsson <ragnar.orn@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "django_sandbox"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
djangorestframework = "^3.14.0"
Scrapy = "^2.7.1"
black = "^22.12.0"
pylint = "^2.15.10"
psycopg2 = "^2.9.5"
scrapy-djangoitem = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
