[tool.poetry]
name = "django-pytest"
version = "0.1.0"
description = ""
authors = ["Ragnar Olafsson <ragnar.orn@gmail.com>"]
readme = "README.md"
packages = [{include = "django_pytest"}]

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.14.0"
pytest = "^7.2.1"
pytest-django = "^4.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
